# TinyGPT-v1.0

./: .gitignore  LICENSE  README.md  generate.py  main.py  pyproject.toml  train.py
configs/: default.yaml
datasets/: tokenizer.json  train.txt
src/cli/: commands.py
src/config/: config.py  loader.py  schema.py  settings.py
src/datasets/: language_dataset.py
src/models/: attention.py  embedding.py  gpt.py  transformer_block.py
src/tokenizers/: base.py  tokenizer_factory.py  trainer.py  word_tokenizer.py
src/trainer/: trainer.py
src/utils/: device.py  logger.py
tests/: test_attention.py  test_config.py  test_dataset.py  test_device.py  test_embedding.py  test_gpt.py  test_tokenizer.py  test_transformer_block.py
