[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygpt"
version = "0.1.0"
description = "Educational GPT implementation built from scratch using PyTorch."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Gaurav Kumar" }
]

dependencies = [
    "torch",
    "pyyaml",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
